<?xml version="1.0" encoding="utf-8"?>
<resources>
    <public name="kvell_payments_sdk" type="string">KvellPaymentsSDK</public>
    <string name="kvell_text_error_public_key">Ключ ещё загружается, попробуйте снова</string>
    <string name="kvell_text_options_title">Выберите способ оплаты</string>
    <string name="kvell_text_options_card">Банковская карта</string>
    <string name="kvell_text_options_save_card">Сохранить карту</string>
    <string name="kvell_text_options_save_card_popup_1">Нажимая на чек-бокс, вы соглашаетесь с тем, что данные вашей карты сохранятся. Это означает, что при повторной оплате вам не надо будет вводить платежные реквизиты заново.</string>
    <string name="kvell_text_options_save_card_popup_2">При этом мы не сможем проводить никакие операции по вашей карте без вашего согласия.</string>
    <string name="kvell_text_options_email_checkbox">Отправить квитанцию на E-mail</string>
    <string name="kvell_text_options_email_title">E-mail</string>
    <string name="kvell_text_options_email_error">Некорректный e-mail</string>
    <string name="kvell_text_options_email_require">Для оплаты введите E-mail</string>
    <string name="kvell_text_options_card_be_saved">При оплате данные вашей карты сохранятся</string>

    <string name="kvell_text_secure_title">Безопасный платёж</string>
    <string name="kvell_text_secure_description">Все данные зашифрованы и передаются по защищённому протоколу TLS v1.2</string>
    <string name="kvell_text_developed">Разработано в KVELL</string>
    <string name="kvell_text_support_phone">+7 (495) 120-22-50</string>
    <string name="kvell_text_support_email">support@kvell.ru</string>

    <string name="kvell_text_card_title">Оплата картой</string>
    <string name="kvell_text_card_hint_number">Номер карты</string>
    <string name="kvell_text_card_hint_exp">ММ / ГГ</string>
    <string name="kvell_text_card_hint_cvv">CVV</string>
    <string name="kvell_text_card_pay_button">Оплатить %s</string>
    <string name="kvell_text_card_label_number">Номер карты</string>
    <string name="kvell_text_card_label_exp">Срок действия</string>
    <string name="kvell_text_card_label_cvv">CVV/CVC</string>
    <string name="kvell_text_card_label_holder">Имя на карте</string>
    <string name="kvell_text_card_holder_hint">IVAN IVANOV</string>
    <string name="kvell_text_card_brand">KVELL.Pay</string>

    <string name="kvell_text_process_title">Ожидание оплаты</string>
    <string name="kvell_text_process_total">Итого</string>
    <string name="kvell_text_process_title_success">Оплата прошла успешно</string>
    <string name="kvell_text_process_button_success">Вернуться в магазин</string>
    <string name="kvell_text_process_title_error">Оплата не прошла</string>
    <string name="kvell_text_process_button_error">Попробовать снова</string>

    <string name="kvell_text_process_title_tinkoff_pay">Ждем ответа\noт Тинькофф Pay</string>
    <string name="kvell_text_process_description_tinkoff_pay">Если перейти и оплатить в приложении не удалось, попробуйте снова или выберите другой способ оплаты</string>
    <string name="kvell_text_process_button_tinkoff_pay">Выбрать способ оплаты</string>

    <string name="kvell_text_options_sbp">Оплатить через СБП</string>
    <string name="kvell_text_process_title_sbp">Ждем оплату\nчерез СБП</string>
    <string name="kvell_text_process_description_sbp">Если перейти и оплатить в приложении банка не удалось, попробуйте снова или выберите другой способ оплаты</string>
    <string name="kvell_text_process_button_sbp">Выбрать способ оплаты</string>


    <string name="kvell_currency_template">%.2f\u20BD</string>

    <!-- ERRORS -->
    <string name="kvell_error_3001">Неверный номер заказа</string>
    <string name="kvell_error_3002">Некорректный идентификатор плательщика</string>
    <string name="kvell_error_3003">Неверная сумма</string>
    <string name="kvell_error_3004">Платеж просрочен</string>
    <string name="kvell_error_3005">Платеж не может быть принят</string>
    <string name="kvell_error_3006">Сервис недоступен</string>
    <string name="kvell_error_3007">Ошибка соединения</string>
    <string name="kvell_error_3008">Платеж не может быть принят</string>
    <string name="kvell_error_5001">Отказ эмитента проводить онлайн операцию</string>
    <string name="kvell_error_5005">Операция отклонена эмитентом</string>
    <string name="kvell_error_5006">Отказ сети проводить операцию или неправильный CVV код</string>
    <string name="kvell_error_5012">Карта не предназначена для онлайн платежей</string>
    <string name="kvell_error_5013">Слишком маленькая или слишком большая сумма операции</string>
    <string name="kvell_error_5030">Ошибка на стороне эквайера</string>
    <string name="kvell_error_5031">Неизвестный эмитент карты</string>
    <string name="kvell_error_5034">Отказ эмитента</string>
    <string name="kvell_error_5041">Карта потеряна</string>
    <string name="kvell_error_5043">Карта украдена</string>
    <string name="kvell_error_5051">Недостаточно средств на карте</string>
    <string name="kvell_error_5054">Карта просрочена или неверно указан срок действия</string>
    <string name="kvell_error_5057">Ограничение на карте</string>
    <string name="kvell_error_5065">Превышен лимит операций по карте</string>
    <string name="kvell_error_5082">Неверный CVV код</string>
    <string name="kvell_error_5091">Эмитент недоступен</string>
    <string name="kvell_error_5092">Эмитент недоступен</string>
    <string name="kvell_error_5096">Ошибка банка-эквайера или сети</string>
    <string name="kvell_error_5204">Операция не может быть обработана</string>
    <string name="kvell_error_5206">3-D Secure авторизация не пройдена</string>
    <string name="kvell_error_5207">3-D Secure авторизация недоступна</string>
    <string name="kvell_error_5300">Лимиты эквайера на проведение операций</string>
    <string name="kvell_error_3001_extra">Платеж будет отклонен</string>
    <string name="kvell_error_3002_extra">Платеж будет отклонен</string>
    <string name="kvell_error_3003_extra">Обратитесь в поддержку сайта</string>
    <string name="kvell_error_3004_extra">Обратитесь в поддержку сайта</string>
    <string name="kvell_error_3005_extra">Платеж будет отклонен</string>
    <string name="kvell_error_3006_extra">Платеж будет отклонен. Попробуйте позже</string>
    <string name="kvell_error_3007_extra">Платеж будет отклонен. Попробуйте позже</string>
    <string name="kvell_error_3008_extra">Платеж будет отклонен</string>
    <string name="kvell_error_5001_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="kvell_error_5005_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="kvell_error_5006_extra">Проверьте правильность введенных данных карты или воспользуйтесь другой картой</string>
    <string name="kvell_error_5012_extra">Воспользуйтесь другой картой или свяжитесь с банком, выпустившим карту</string>
    <string name="kvell_error_5013_extra">Проверьте корректность суммы</string>
    <string name="kvell_error_5030_extra">Повторите попытку позже</string>
    <string name="kvell_error_5031_extra">Воспользуйтесь другой картой</string>
    <string name="kvell_error_5034_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="kvell_error_5041_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="kvell_error_5043_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="kvell_error_5051_extra"></string>
    <string name="kvell_error_5054_extra">Проверьте правильность введенных данных карты или воспользуйтесь другой картой</string>
    <string name="kvell_error_5057_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="kvell_error_5065_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="kvell_error_5082_extra">Проверьте правильность введенных данных карты или воспользуйтесь другой картой</string>
    <string name="kvell_error_5091_extra">Повторите попытку позже или воспользуйтесь другой картой</string>
    <string name="kvell_error_5092_extra">Повторите попытку позже или воспользуйтесь другой картой</string>
    <string name="kvell_error_5096_extra">Повторите попытку позже</string>
    <string name="kvell_error_5204_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="kvell_error_5206_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="kvell_error_5207_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
    <string name="kvell_error_5300_extra">Свяжитесь с вашим банком или воспользуйтесь другой картой</string>
</resources>