<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/image_drag_handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/drag_handle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/card_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/kvell_bg_rounded_card"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="18dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_drag_handle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/kvell_ic_card"
                app:tint="#14151A" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/rubik_medium"
                android:letterSpacing="0.01"
                android:maxLines="1"
                android:text="@string/kvell_text_card_title"
                android:textColor="#14151A"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            style="@style/kvell_TextFieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/kvell_text_card_label_number" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_card_number"
                style="@style/kvell_TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_card_number"
                    style="@style/kvell_TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789 "
                    android:drawableStart="@drawable/kvell_ic_card"
                    android:drawablePadding="10dp"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:nextFocusDown="@id/edit_card_exp"
                    tools:text="4242 4242 4242 4242" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/ic_ps"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="12dp"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/btn_scan"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="12dp"
                android:background="@null"
                android:src="@drawable/kvell_ic_scan" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/kvell_TextFieldLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kvell_text_card_label_exp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_card_exp"
                    style="@style/kvell_TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_card_exp"
                        style="@style/kvell_TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789/"
                        android:drawableStart="@drawable/kvell_ic_calendar"
                        android:drawablePadding="10dp"
                        android:hint="@string/kvell_text_card_hint_exp"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:nextFocusDown="@id/edit_card_cvv" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Space
                android:layout_width="12dp"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/kvell_TextFieldLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kvell_text_card_label_cvv" />

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginStart="6dp"
                        android:src="@drawable/kvell_ic_info" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_card_cvv"
                    style="@style/kvell_TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_card_cvv"
                        style="@style/kvell_TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"
                        android:hint="@string/kvell_text_card_hint_cvv"
                        android:imeOptions="actionDone"
                        android:inputType="numberPassword"
                        android:maxLength="4"
                        tools:text="111" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/kvell_TextFieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/kvell_text_card_label_holder" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_card_holder"
            style="@style/kvell_TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_card_holder"
                style="@style/kvell_TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kvell_text_card_holder_hint"
                android:imeOptions="actionDone"
                android:inputType="textCapCharacters"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rubik_bold"
        android:letterSpacing="-0.01"
        android:text="@string/kvell_text_card_brand"
        android:textColor="#14151A"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_wrapper" />

    <Button
        android:id="@+id/button_pay"
        style="@style/kvell_ButtonBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/kvell_bg_rounded_black_button"
        android:drawableStart="@drawable/kvell_ic_lock"
        android:drawablePadding="8dp"
        android:text="@string/kvell_text_card_pay_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_brand" />

    <View
        android:id="@+id/view_block_buttons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:background="@color/kvell_white"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/button_pay"
        app:layout_constraintEnd_toEndOf="@id/button_pay"
        app:layout_constraintStart_toStartOf="@id/button_pay"
        app:layout_constraintTop_toTopOf="@id/button_pay" />
</androidx.constraintlayout.widget.ConstraintLayout>
