<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/image_drag_handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/drag_handle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="12dp"
        android:adjustViewBounds="true"
        android:src="@drawable/kvell_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_drag_handle" />

    <TextView
        android:id="@+id/text_title"
        style="@style/kvell_TextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kvell_text_options_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_logo" />

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title">

        <Button
            android:id="@+id/button_pay_card"
            style="@style/kvell_ButtonBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/kvell_bg_rounded_black_button"
            android:text="@string/kvell_text_options_card" />

        <ImageButton
            android:id="@+id/button_tinkoff_pay"
            style="@style/kvell_ButtonBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/kvell_bg_rounded_black_button"
            android:src="@drawable/kvell_button_tinkoff_pay"
            android:text="@string/kvell_text_options_card"
            android:visibility="gone"/>

        <com.yandex.pay.core.ui.YandexPayButton
            android:id="@+id/button_yandexpay"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            app:yandexpay_color_scheme="dark"
            app:yandexpay_corner_radius="8dp" />
    </LinearLayout>

    <View
        android:id="@+id/view_block_buttons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:background="@color/kvell_white"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/layout_buttons"
        app:layout_constraintEnd_toEndOf="@id/layout_buttons"
        app:layout_constraintStart_toStartOf="@id/layout_buttons"
        app:layout_constraintTop_toTopOf="@id/layout_buttons" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_save_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:button="@drawable/kvell_ic_checkbox_selector"
        android:fontFamily="@font/sf_pro_text_regular"
        android:gravity="center_vertical"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="6sp"
        android:paddingStart="10dp"
        android:text="@string/kvell_text_options_save_card"
        android:textColor="#8c949f"
        android:textSize="16sp"
        android:textStyle="normal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_buttons" />

    <ImageView
        android:id="@+id/button_save_card_popup"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="-2dp"
        android:src="@drawable/kvell_ic_save_card_popup"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/checkbox_save_card"
        app:layout_constraintStart_toEndOf="@id/checkbox_save_card" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_send_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sf_pro_text_regular"
        android:gravity="center_vertical"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="6sp"
        android:paddingStart="10dp"
        android:text="@string/kvell_text_options_email_checkbox"
        android:textColor="#8c949f"
        app:buttonTint="@color/kvell_black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_save_card" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_email"
        style="@style/kvell_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/kvell_text_options_email_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_send_receipt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            style="@style/kvell_TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_email_require"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_required_email"
        android:drawablePadding="8dp"
        android:fontFamily="@font/sf_pro_text_regular"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="5sp"
        android:text="@string/kvell_text_options_email_require"
        android:textColor="#8c949f"
        android:textSize="13sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_field_email" />

    <TextView
        android:id="@+id/text_card_be_saved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/sf_pro_text_regular"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="5sp"
        android:text="@string/kvell_text_options_card_be_saved"
        android:textColor="#8c949f"
        android:textSize="13sp"
        android:textStyle="normal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email_require" />

    <ImageView
        android:id="@+id/button_card_be_saved_popup"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="-2dp"
        android:src="@drawable/kvell_ic_save_card_popup"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/text_card_be_saved"
        app:layout_constraintStart_toEndOf="@id/text_card_be_saved" />

    <LinearLayout
        android:id="@+id/layout_secure_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/kvell_margin_big"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_card_be_saved">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="26dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/img_save_card" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:letterSpacing="0.01"
                    android:text="@string/kvell_text_secure_title"
                    android:textColor="#14151A"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/sf_pro_text_regular"
                    android:letterSpacing="-0.01"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/kvell_text_secure_description"
                    android:textColor="#8c949f"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/sf_pro_text_regular"
            android:text="@string/kvell_text_developed"
            android:textColor="#14151A"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="13dp"
                android:layout_height="17dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/img_phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_regular"
                android:text="@string/kvell_text_support_phone"
                android:textColor="#14151A"
                android:textSize="14sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="#d5d9df" />

            <ImageView
                android:layout_width="17dp"
                android:layout_height="14dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/img_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_text_regular"
                android:text="@string/kvell_text_support_email"
                android:textColor="#14151A"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="46dp"
                android:layout_height="15dp"
                android:alpha="0.4"
                android:src="@drawable/img_visa" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="37dp"
                android:layout_height="23dp"
                android:alpha="0.4"
                android:src="@drawable/img_master_card" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="55dp"
                android:layout_height="16dp"
                android:alpha="0.4"
                android:src="@drawable/img_mir" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="37dp"
                android:layout_height="23dp"
                android:alpha="0.4"
                android:src="@drawable/img_union_pay" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="34dp"
                android:layout_height="23dp"
                android:alpha="0.4"
                android:src="@drawable/img_pci" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
